--- a/src/scss/_vars.sass
+++ b/src/scss/_vars.sass
@@ -1,6 +1,13 @@
-///////////////////////
-// Initial Variables //
-///////////////////////
+//////////
+// Path //
+//////////
+  
+$font-path: "../fonts"
+$fa-font-path: "../fonts/webfonts"
+
+/////////////////////////////
+// Bulma Initial Variables //
+/////////////////////////////
 
 // Colors
 
@@ -77,15 +84,15 @@ $speed: 86ms !default
 
 $variable-columns: true !default
 
-///////////////////////
-// Derived Variables //
-///////////////////////
+/////////////////////////////
+// Bulma Derived Variables //
+/////////////////////////////
 
 $primary: hsl(0, 77%, 51%) !default
 
 $info: $cyan !default
 $success: $green !default
-$warning: $yellow !default
+$warning: $orange !default
 $danger: $red !default
 
 $light: $white-ter !default
