--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,12 @@
 // @import 'fonts/roboto';
 
 //----------------------------------*\
+// ANIMATIONS
+//----------------------------------*/
+
+@import 'animations';
+
+//----------------------------------*\
 // STYLES
 //----------------------------------*/
 
