--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -1,4 +1,4 @@
-body > section {
+body>section {
   height: 100vh;
   overflow: auto;
 }
@@ -7,6 +7,7 @@ section {
   &.has-footer {
     padding-bottom: 70px;
   }
+
   &.bg-grey {
     background-color: $grey-lighter;
   }
@@ -14,7 +15,7 @@ section {
 
 #brandList {
   .media {
-    &+ .media {
+    &+.media {
       padding-top: 0;
       border-top: none;
     }
@@ -25,30 +26,34 @@ section {
   .columns {
     margin-bottom: 0;
   }
+
   .history {
-    &+ .history {
+    &+.history {
       border-top: 1px solid #bbbbbb;
       padding-top: 0.75rem;
     }
   }
+
   .history-general {
     p {
       font-weight: 700;
-    }  
+    }
   }
+
   .history-detail {
     position: relative;
     background-color: #bbbbbb;
     font-size: 0.75rem;
     padding: 0.75rem;
+
     .arrow-up {
       position: absolute;
       top: -8px;
       left: 12px;
-      width: 0; 
-      height: 0; 
+      width: 0;
+      height: 0;
       border-left: 8px solid transparent;
-      border-right: 8px solid transparent;  
+      border-right: 8px solid transparent;
       border-bottom: 8px solid #bbbbbb;
     }
   }
@@ -56,28 +61,35 @@ section {
 
 .order-status {
   background-color: $white;
+
   p {
     font-size: 0.6rem;
     font-weight: 700;
     line-height: 1.2;
   }
+
   .level {
     .level-left {
       max-width: 60%;
     }
   }
+
   .row-section {
     margin-top: 0;
+
     .control {
       margin-top: 0;
+
       .button {
         margin-top: 0;
       }
     }
+
     &:not(:last-child) {
       padding-bottom: 0.75rem;
     }
   }
+
   .order-pending,
   .order-preparing {
     background-color: #e6e6e6;
@@ -85,6 +97,7 @@ section {
     text-transform: none;
     opacity: 1;
   }
+
   .order-choped,
   .order-confirmed,
   .order-makan-time {
@@ -99,13 +112,16 @@ section {
 .thank-you {
   margin-top: 0.75rem;
   margin-bottom: 1.5rem;
+
   h5 {
     font-size: 1rem;
     font-weight: 900;
   }
+
   p {
     font-weight: 700;
   }
+
   hr {
     width: 120px;
     height: 1px;
@@ -126,9 +142,11 @@ section {
       text-transform: uppercase;
     }
   }
+
   &.bg-grey {
     background-color: $grey-lighter;
   }
+
   &.no-wrap {
     padding: 0 7px;
     margin: 12px 0;
@@ -142,6 +160,7 @@ section {
     display: inline-block;
     vertical-align: middle;
     padding: 0 5px;
+
     .category-bg {
       width: 96px;
       height: 64px;
@@ -182,11 +201,13 @@ section {
       background-color: $white;
     }
   }
+
   .media-content {
     .content {
       .top-half {
         min-height: 60px;
         margin-bottom: 0;
+
         &.product {
           min-height: 70px;
         }
@@ -206,6 +227,7 @@ section {
   color: $primary;
   text-align: center;
   text-transform: uppercase;
+
   .icon {
     border: 2px solid;
     border-radius: 100%;
@@ -222,13 +244,16 @@ section {
 
 .row-section {
   margin-top: 0.75rem;
+
   .control {
     margin-top: 5px;
+
     .button {
       margin-top: 10px;
     }
   }
-  &+ .row-section {
+
+  &+.row-section {
     padding-top: 0.75rem;
     border-top: 1px solid $grey-lighter;
   }
@@ -238,12 +263,15 @@ section {
   strong {
     text-transform: uppercase;
   }
+
   .columns {
     padding-right: 6px;
     padding-left: 6px;
     margin-top: 0;
+
     .column {
       padding: 6px;
+
       .button {
         display: block;
         width: 100%;
@@ -264,26 +292,31 @@ section {
   width: 100%;
   background-color: $grey-lighter;
   padding: 0.75rem;
+
   .quantity {
     display: flex;
     flex: 1 1 30%;
     padding-right: 0.25rem;
     padding-left: 0.25rem;
+
     .button {
       flex: 1 1 30%;
       background-color: $grey-light;
       color: $primary;
       padding: 5px;
     }
-    &> p {
+
+    &>p {
       line-height: 1.15;
     }
-    &> strong {
+
+    &>strong {
       flex: 2 1 30%;
       text-align: center;
       line-height: 36px;
     }
   }
+
   .action {
     flex: 1 1 70%;
     padding-right: 0.25rem;
@@ -305,10 +338,11 @@ section {
 .jconfirm {
   .jconfirm-holder {
     padding: 15px;
+
     .jconfirm-box {
       border-radius: 0;
     }
-  } 
+  }
 }
 
 #paymentMethods header img {
@@ -317,7 +351,7 @@ section {
 }
 
 #paymentMethods header .brand {
-	font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 #paymentMethods .payment-title {
@@ -325,97 +359,99 @@ section {
 }
 
 #paymentMethods .payment {
-  padding: 12px;
+  padding: 0.5rem;
   margin-bottom: 0.75rem;
   border: 2px solid $grey-lighter;
 }
 
 #paymentMethods .payment.selected {
   background-color: $white-ter;
-	border: 2px solid $primary;
+  border: 2px solid $primary;
 }
 
 #paymentMethods .payment.selected strong {
-	color: $primary;
+  color: $primary;
 }
 
 #paymentMethods .payment img {
-	max-width: 80px;
-	max-height: 40px;
+  max-width: 80px;
+  max-height: 40px;
 }
 
 #paymentMethods .payment .level:not(:last-child) {
-	margin-bottom: 12px;
+  margin-bottom: 0.5rem;
 }
 
-#paymentMethods .payment .level + .level {
-	border-top: 1px solid #cccccc;
-	padding-top: 12px;
-	margin-left: 25px;
+#paymentMethods .payment .level+.level {
+  border-top: 1px solid #cccccc;
+  padding-top: 0.5rem;
+  margin-left: 25px;
 }
 
 #paymentMethods .payment .level .radio-button {
-	flex-grow: 0;
-	width: 25px;
+  flex-grow: 0;
+  width: 25px;
 }
 
 #paymentMethods .payment .level.is-mobile .level-item {
-	justify-content: flex-start;
-	margin-right: 0;
+  justify-content: flex-start;
+  margin-right: 0;
 }
 
 #paymentMethods .paylah .mobile-number .is-left {
-	width: 50%;
+  width: 50%;
+  padding-right: 0.25rem;
 }
 
 #paymentMethods .paylah .mobile-number .is-right {
-	width: 50%;
+  width: 50%;
+  padding-left: 0.25rem;
 }
 
 #paymentMethods .tnc {
-	margin-top: 25px;
-	text-align: center;
+  margin-top: 25px;
+  text-align: center;
 }
 
 #paymentMethods .tnc .link {
-	color: $primary;
+  color: $primary;
 }
 
 .order-checkout {
-	max-width: 340px;
-	width: 86%;
-	padding: 0 20px;
-	margin: 60px auto;
+  max-width: 340px;
+  width: 86%;
+  padding: 0 20px;
+  margin: 60px auto;
 }
 
 .text-center {
-	text-align: center;
+  text-align: center;
 }
 
-.field > .country-code {
-	position: absolute;
-	background: #ffffff;
-	max-width: 52px;
-	overflow: hidden;
-	word-wrap: break-word;
-	border: 1px solid #cccccc;
-	z-index: 10;
+.field>.country-code {
+  position: absolute;
+  background: #ffffff;
+  max-width: 52px;
+  overflow: hidden;
+  word-wrap: break-word;
+  border: 1px solid #cccccc;
+  z-index: 10;
 }
 
-span.country-code + input {
-	padding-left: 60px;
+span.country-code+input {
+  padding-left: 60px;
 }
 
 #guestCheckout {
-	max-width: 60%;
-	margin: auto;
-	padding-top: 60px;
+  max-width: 60%;
+  margin: auto;
+  padding-top: 60px;
 }
 
 #guestCheckout h3 {
-	padding: 10px 0 10px 0;
-	font-weight: 500;
-	font-size: 1.35em;
+  padding: 10px 0 10px 0;
+  font-weight: 500;
+  font-size: 1.35em;
 }
 
 .spin-loader-circle {
@@ -431,6 +467,7 @@ span.country-code + input {
   border-radius: 50%;
   box-shadow: 0 5px 0 0 $white;
   animation: spinAround 1s linear infinite;
+
   &.is-dark {
     box-shadow: 0 5px 0 0 $grey;
   }
