--- a/src/scss/_vars.sass
+++ b/src/scss/_vars.sass
@@ -153,7 +153,15 @@ $size-medium: $size-5 !default
 $size-large: $size-4 !default
 
 // Lists and maps
+
 $custom-colors: ("secondary": ($secondary, $secondary-invert)) !default
 $custom-shades: null !default
 
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default
+
+// Spinners
+
+$spinner-color-ios: $grey !default
+$spinner-color-android: $grey !default
+$spinner-size-ios: 24px !default
+$spinner-size-android: 32px !default
