yarn.lock, add warning-invert color

--- a/src/scss/_vars.sass
+++ b/src/scss/_vars.sass
@@ -103,6 +103,7 @@ $dark: $grey !default
 
 $primary-invert: $white;
 $secondary-invert: $white;
+$warning-invert: $white !default
 $light-invert: $grey-dark !default
 $dark-invert: $white !default
 
