--- a/scss/_vars.sass
+++ b/scss/_vars.sass
@@ -3,7 +3,8 @@
 //////////
   
 $font-path: "../fonts"
-$fa-font-path: "../fonts/webfonts"
+$fa-font-path: "../fonts/fa"
+$mdi-font-path: "../fonts/mdi"
 
 /////////////////////////////
 // Bulma Initial Variables //
@@ -36,8 +37,7 @@ $red:          hsl(348, 100%, 61%) !default
 
 // Typography
 
-// $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
-$family-sans-serif: "BurlingameProCondensed", sans-serif !default
+$family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $family-monospace: monospace !default
 $render-mode: optimizeLegibility !default
 
@@ -131,7 +131,8 @@ $pre-background: $background !default
 
 // Link colors
 
-$link: $blue !default
+// $link: $blue !default
+$link: $orange !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
